added article to git page

--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -30,8 +30,9 @@
         </nav>
     </header>
     <div id="site-background"></div>
-    <main> <!-- Her har dere ikke article, differerer ifra de andre sidene -->
-        <h1 class="github">Github og GIT</h1>
+    <main>
+        <article>
+            <h1 class="github">Github og GIT</h1>
             <div class="img-container-github">
                 <div class="img-item">
                     <h2>Commit History i GIT</h2>
@@ -44,43 +45,46 @@
                     <img src="../images/gitbilde 2.png" alt="bilde 4 specific change">
                 </div>
             </div>
-        <section id="main-github">
-            <div class="split-container">
-                <div class="split-left">
-                    <div class="content-box">
-                        <h2 class="github">GIT versjonskontrollsystem</h2>
-                        <p>Git er et versjonskontrollsystem, som er et program som holder orden på nye og tidligere
-                            filer. Filene slettes ikke, men lagres i en database. Vi bruker GitHub. Dette gjør det mulig
-                            å spore filer, eller endringer i kodeprosjektet vårt, og generelt øker orden på prosjektet.
-                            Git gjør det mulig å enkelt gå tilbake til tidligere versjoner av en kode, og se forskjellen det utgjør på nettsiden.
-                        </p>
-                    </div>    
-                    <hr class="separator centered">
-                    <div class="content-box">
-                        <h2 class="github">Bruk av Pull Request og Merge</h2>
-                        <p>Når en branch er ferdig, sendes den over til Github, og der kan andre brukere på projektet se koden. Dette er for å foreslå endringer,
-                            uten å direkte legge koden inn i projektet. Pull requests øker samarbeid mellom brukere, og gjør det lettere å forbedre koden til selve projektet.
-                            Merge er når den foreslåtte koden blir godkjent, og er klar for å integreres til 'main'. Nå er den utviklede branchen ferdig. 
-                        </p>
-                    </div>    
+        </article>
+        <article>
+            <section id="main-github">
+                <div class="split-container">
+                    <div class="split-left">
+                        <div class="content-box">
+                            <h2 class="github">GIT versjonskontrollsystem</h2>
+                            <p>Git er et versjonskontrollsystem, som er et program som holder orden på nye og tidligere
+                                filer. Filene slettes ikke, men lagres i en database. Vi bruker GitHub. Dette gjør det mulig
+                                å spore filer, eller endringer i kodeprosjektet vårt, og generelt øker orden på prosjektet.
+                                Git gjør det mulig å enkelt gå tilbake til tidligere versjoner av en kode, og se forskjellen det utgjør på nettsiden.
+                            </p>
+                        </div>    
+                        <hr class="separator centered">
+                        <div class="content-box">
+                            <h2 class="github">Bruk av Pull Request og Merge</h2>
+                            <p>Når en branch er ferdig, sendes den over til Github, og der kan andre brukere på projektet se koden. Dette er for å foreslå endringer,
+                                uten å direkte legge koden inn i projektet. Pull requests øker samarbeid mellom brukere, og gjør det lettere å forbedre koden til selve projektet.
+                                Merge er når den foreslåtte koden blir godkjent, og er klar for å integreres til 'main'. Nå er den utviklede branchen ferdig. 
+                            </p>
+                        </div>    
+                    </div>
+                    <div class="split-right">
+                        <div class="content-box">
+                            <h2>Arbeid samtidig på samme projekt</h2>
+                            <p>Git lar brukere lage det som heter "branches", som er separate filer fra hovedprojektet. Hovedbranchen kalles oftest 
+                                for "main", og dette er her vi danner branches fra. Uten branches ville samarbeid på et projekt vær
+                                utfordrende, og forstyrrende. Når en branch er ferdig, kan den testest eller sjekkes, og integreres til 'main'.</p>
+                        </div>    
+                        <hr class="separator centered">
+                        <div class="content-box">
+                            <h2>Github gjør mulighet for Sporing av Bidrag</h2>
+                            <p>Github registerer aktiviteten til brukere, og ser hvem som har gjort hva. Dette gir 
+                                oss mulighet til å få oversikt over hvem som har gjort hvilken del av projektet.
+                            </p>
+                        </div>   
+                    </div>
                 </div>
-                <div class="split-right">
-                    <div class="content-box">
-                        <h2>Arbeid samtidig på samme projekt</h2>
-                        <p>Git lar brukere lage det som heter "branches", som er separate filer fra hovedprojektet. Hovedbranchen kalles oftest 
-                            for "main", og dette er her vi danner branches fra. Uten branches ville samarbeid på et projekt vær
-                            utfordrende, og forstyrrende. Når en branch er ferdig, kan den testest eller sjekkes, og integreres til 'main'.</p>
-                    </div>    
-                    <hr class="separator centered">
-                    <div class="content-box">
-                        <h2>Github gjør mulighet for Sporing av Bidrag</h2>
-                        <p>Github registerer aktiviteten til brukere, og ser hvem som har gjort hva. Dette gir 
-                            oss mulighet til å få oversikt over hvem som har gjort hvilken del av projektet.
-                        </p>
-                    </div>   
-                </div>
-            </div>
-        </section>       
+            </section>       
+        </article>
     </main>
 
     <!-- Footer Menu -->
