Corrected spelling and grammar in the github page

--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -55,7 +55,7 @@
                             <p>Git er et versjonskontrollsystem, som er et program som holder orden på nye og tidligere
                                 filer. Filene slettes ikke, men lagres i en database. Vi bruker GitHub. Dette gjør det mulig
                                 å spore filer, eller endringer i kodeprosjektet vårt, og generelt øker orden på prosjektet.
-                                Git gjør det mulig å enkelt gå tilbake til tidligere versjoner av en kode, og se forskjellen det utgjør på nettsiden.
+                                Git gjør det mulig og enkelt gå tilbake til tidligere versjoner av en kode, og se forskjellen det utgjør på nettsiden.
                             </p>
                         </div>    
                         <hr class="separator centered">
@@ -71,13 +71,13 @@
                         <div class="content-box">
                             <h2>Arbeid samtidig på samme projekt</h2>
                             <p>Git lar brukere lage det som heter "branches", som er separate filer fra hovedprojektet. Hovedbranchen kalles oftest 
-                                for "main", og dette er her vi danner branches fra. Uten branches ville samarbeid på et projekt vær
-                                utfordrende, og forstyrrende. Når en branch er ferdig, kan den testest eller sjekkes, og integreres til 'main'.</p>
+                                for "main", og dette er her vi danner branches fra. Uten branches ville samarbeid på et projekt være
+                                utfordrende og forstyrrende. Når en branch er ferdig, kan den testest eller sjekkes, og integreres til 'main'.</p>
                         </div>    
                         <hr class="separator centered">
                         <div class="content-box">
                             <h2>Github gjør mulighet for Sporing av Bidrag</h2>
-                            <p>Github registerer aktiviteten til brukere, og ser hvem som har gjort hva. Dette gir 
+                            <p>Github registrerer aktiviteten til brukere, og ser hvem som har gjort hva. Dette gir 
                                 oss mulighet til å få oversikt over hvem som har gjort hvilken del av projektet.
                             </p>
                         </div>   
