comment change, removed class

--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -34,7 +34,7 @@
     </header>
     <main>
         <article>
-            <section class="flex">
+            <section>
                 <h1>Accessibility</h1>
                 <img class="img-accessibility-split" src="../images/css-media-queries.png"
                     alt="Bilde av CSS media queries">
