--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -70,7 +70,7 @@
                     på riktig boks.
                 </p>
             </section>
-            <section class="flex">
+            <section>
                 <img class="img-accessibility-split" src="../images/html-structure.png" alt="Bilde av HTML struktur">
                 <p>I koden ønsket vi å unngå feil relatert til opening og closing HTML-tags. Ved å bruke konsekvent og
                     tydelig innrykk blir
