--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -70,7 +70,7 @@
                     på riktig boks.
                 </p>
             </section>
-            <section class="flex">
+            <section>
                 <img class="img-accessibility-split" src="../images/html-structure.png" alt="Bilde av HTML struktur">
                 <p>I koden ønsket vi å unngå feil relatert til opening og closing HTML-tags. Ved å bruke konsekvent og
                     tydelig innrykk blir
@@ -85,7 +85,7 @@
                     hver side for å sikre at JavaScript og CSS fungerer som forventet. For å forbedre tilgjengeligheten
                     og
                     gjøre designet mer
-                    responsivt, brukte vi fleksible måleenheter som em og rem i stedet for faste px-verdier. em og rem
+                    responsivt, brukte vi fleksible måleenheter som em og rem i stedet for faste px-verdier. Em og rem
                     tilpasser seg brukerens
                     standardinnstillinger og skjermstørrelse, noe som gir en bedre og mer skalerbar brukeropplevelse på
                     tvers av forskjellige
