fixed css git page

--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -49,7 +49,7 @@
         <article>
             <section id="main-github">
                 <div class="split-container">
-                    <div class="split-left">
+                    <div class="split-text">
                         <div class="content-box">
                             <h2 class="github">GIT versjonskontrollsystem</h2>
                             <p>Git er et versjonskontrollsystem, som er et program som holder orden på nye og tidligere
@@ -67,7 +67,7 @@
                             </p>
                         </div>    
                     </div>
-                    <div class="split-right">
+                    <div class="split-text">
                         <div class="content-box">
                             <h2>Arbeid samtidig på samme projekt</h2>
                             <p>Git lar brukere lage det som heter "branches", som er separate filer fra hovedprojektet. Hovedbranchen kalles oftest 
