--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -2,15 +2,23 @@
 <html lang="en">
 
 <head>
+    <!-- Meta information for proper encoding and responsive design -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Link to external stylesheets -->
     <link rel="stylesheet" href="../stylesheet/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Favicon for browser tabs -->
     <link rel="icon" type="image/x-icon" href="../images/favicon_io/android-chrome-512x512.png">
+
     <title> Activities in Oslo </title>
-    <!-- Mye av innholdet på denne siden er hentet fra Visit Oslo sine ressurser. Alle linker peker til Visit Oslo. -->
+
+    <!-- Attribution for content and images -->
+    <!-- All images are sourced from Pexels. Links and content inspiration are primarily based on Visit Oslo and other official Oslo-related resources. -->
 </head>
-<body class="activity">
+
+<body>
     <header id="activity-header">
         <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
         <a href="https://www.visitoslo.com/no/" class="img-container">
@@ -18,11 +26,13 @@
         </a>
         <nav>
             <a id="search-button-activity" href="https://www.visitoslo.com/"><i class="fa fa-search" alt="Søk"></i></a>
-    
+
+            <!-- Dropdown navigation menu -->
             <div class="dropdown-activity">
                 <button class="dropbtn-activity" id="menu-button" aria-hidden="true" title="Navigeringsmeny"><i
                         class="fa fa-bars" aria-hidden="true"></i>
-                    <span class="sr-only">Navigeringsmeny</span></button>
+                    <span class="sr-only">Navigeringsmeny</span>
+                </button>
                 <div class="dropdown-content-activity" id="dropdown-menu">
                     <a href="../index.html">Matematisk modellering og datavitenskap - ingeniør</a>
                     <a href="accessibility.html">Accessibility</a>
@@ -34,11 +44,9 @@
     <div id="activity-background"></div>
     <main>
         <article class="category-box-container">
-
+            <!-- Main section with a description -->
             <section class="activity-main-box" id="aktiviteter">
-
                 <h1 class="header-activity">Utforsk Oslo på en ny måte!</h1>
-                <!--  -->
                 <p>Velkommen til din guide til Oslo,
                     hvor vi har samlet de beste tipsene innen fire spennende kategorier.
                     Enten du er ute etter å oppdage Oslos skjulte perler, finne en hyggelig kafé, oppleve byens
@@ -54,13 +62,16 @@
                 </div>
             </section>
 
+            <!-- Categories section -->
             <article class="category-box-container">
+                <!-- Individual category cards -->
                 <a href="https://www.visitoslo.com/no/spise-og-drikke/uteliv/" class="category-box">
                     <h2> Uteliv </h2>
                     <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
                         viewBox="0 -4 24 24">
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>
+                    <!--Pictures are in 2:1 format-->
                     <img src="../images/clubbing.jpg" alt="bilde av uteliv" style="width: 100%;">
                     <p> Utforsk Oslos fantastiske uteliv! Utforsk byens spennende uteliv!
                         Uansett om du liker eksklusive cocktailbarer, livlige klubber eller
@@ -68,6 +79,7 @@
                     </p>
                 </a>
 
+                <!-- Repeatable structure for other categories -->
                 <a href="https://www.visitoslo.com/no/spise-og-drikke/kaffe--kake/" class="category-box">
                     <h2> Kafé </h2>
                     <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
@@ -125,11 +137,8 @@
             <script src="../javascript/index-tabs"></script>
 
             <article>
-                <!--kommentar til scroll id: endre slik at den stopper før hr?, nå:scroller frem til tittelen..-->
                 <section class="activity-main-box" id="kafe">
                     <h3>Anbefalinger</h3>
-                    <!--midlertidig!! bedre måte enn a heleveien?, men koden er responsiv og funker:)-->
-                    <!--endre class navn?, neo som mangler..-->
                     <div class="small-img-container">
                         <a href="https://www.handbakt.no/" class="small-img-box">
                             <img src="../images/anbefalinger-activity1.jpg" alt="Bilde 1">
@@ -161,9 +170,10 @@
         </article>
     </main>
 
-    <!-- Footer Menu -->
+    <!-- Footer section -->
     <footer>
         <article class="more-info">
+            <!-- Address column -->
             <div class="row">
                 <section id="col1">
                     <span id="icon" class="fa fa-map-marker" aria-hidden="true" title="Map markering"
@@ -180,11 +190,13 @@
 
                     </address>
                 </section>
+
+                <!-- Contact section -->
                 <section id="col2">
                     <span id="icon" class="fa fa-phone" aria-hidden="true" title="Telefon"><span
                             class="sr-only">Telefon</span></span>
                     <address class="address-font">
-                        <a class="more-info-links" href="https://www.oslomet.no/om/kontakt">
+                        <a class="more-info-links-activity" href="https://www.oslomet.no/om/kontakt">
                             <h3>Kontakt oss</h3>
                         </a>
                         <p>Tlf.: 23 10 62 00 </p>
@@ -199,13 +211,14 @@
                         <div class="more-info-tab">
                             <button id="toggle-tab" class="more-info-tab-button" aria-hidden="true"
                                 title="Utvid Info Menu"><span class="sr-only">Expand Info Menu</span>
-                                <svg id="toggle-icon" title="Utvid" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
-                                    viewBox="2 1 20 20" alt=" Nedover pil">
+                                <svg id="toggle-icon" title="Utvid" xmlns="http://www.w3.org/2000/svg" width="30"
+                                    height="30" viewBox="2 1 20 20" alt=" Nedover pil">
                                     <path fill-rule="evenodd"
                                         d="M12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293 1.414 1.414L12 17.414z" />
                                 </svg>
                             </button>
                         </div>
+                        <!-- Content displayed when the tab is expanded -->
                         <div id="more-info-tab" class="more-info-tabcontent">
                             <a class="more-info-links-activity"
                                 href="https://www.visitoslo.com/no/nyhetsbrev/">Nyhetsbrev</a>
@@ -218,29 +231,29 @@
                             <a class="more-info-links-activity"
                                 href="https://www.visitoslo.com/no/oslo-for-deg/tilgjengelighet/">Tilgjenlighet</a>
                         </div>
+                        <!-- Link to JavaScript file for tab functionality -->
                         <script src="../javascript/index-tabs"></script>
                     </span>
                 </section>
             </div>
         </article>
 
-        <!-- Social Media links -->
+        <!-- Social Media links, cred: https://www.visitoslo.com/no/ -->
         <nav class="mediabox-activity">
             <ul class="media-activity">
                 <li>
-                    <a href="https://x.com/visitoslo" class="fa fa-twitter" alt="Twitter / X"></a>
+                    <a href="https://x.com/visitoslo" class="fa fa-twitter" title="Twitter / X"><span
+                            class="sr-only">Twitter / X</span></a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/VisitOslo/" class="fa fa-facebook" alt="Facebook"></a>
+                    <a href="https://www.facebook.com/VisitOslo/" class="fa fa-facebook" title="Facebook"><span
+                            class="sr-only">Facebook</span></a>
                 </li>
                 <li>
-                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin"
-                        title="LinkedIn"><span class="sr-only">LinkedIn</span></a>
+                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" title="Instagram"><span
+                            class="sr-only">Instagram</span></a>
                 </li>
-                <li>
-                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram"
-                        title="Instagram"><span class="sr-only">Instagram</span></a>
-                </li>
+
             </ul>
         </nav>
     </footer>
