check to see if link to images is wrong

--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -55,10 +55,10 @@
                 </p>
                 <!--Pictures are in 16:9 format-->
                 <div class="scroll-img-container">
-                    <img src="/images/toppic1.jpg" alt="operahuset i oslo">
-                    <img src="/images/toppic2.jpg" alt="seilbåt i oslo">
-                    <img src="/images/toppic3.jpg" alt="byen oslo">
-                    <img src="/images/toppic4.jpg" alt="skihopp oslo">
+                    <img src="../images/toppic1.jpg" alt="operahuset i oslo">
+                    <img src="../images/toppic2.jpg" alt="seilbåt i oslo">
+                    <img src="../images/toppic3.jpg" alt="byen oslo">
+                    <img src="../images/toppic4.jpg" alt="skihopp oslo">
                 </div>
             </section>
 
